--- a/static/mashuphope.css
+++ b/static/mashuphope.css
@@ -5,11 +5,17 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: gray;
+
   padding-left: 0.5cm;
   padding-right: 0.5cm;
   padding-top: 0.2cm;
   padding-bottom: 0.8cm;
+}
+html{
+  background-color: rgb(78,32,8);
+}
+body{
+  background-color: rgb(239,234,204);
 }
 header{
   width: 100%;
@@ -20,4 +26,11 @@ h1{
 
 p {
     font-size: 18px;
+}
+#friendcity{
+  margin-top: 1em;
+
+}
+#friendcitybottom{
+  margin-bottom: 2em;
 }
